<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.LoginActivity"
    android:orientation="vertical"
    android:background="#111111">


    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/prompt_email"
        android:textColorHint="@color/colorWhite"
        android:textColor="#cbcdd6"
        android:inputType="textEmailAddress"
        android:maxLines="1" />



    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="#cbcdd6"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button"
        android:text="Sign In"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/AliceBlue" />

    <Button
        android:id="@+id/register_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/button"
        android:text="Register"
        android:fontFamily="@font/open_sans"
        android:textColor="@color/AliceBlue"
        />

    <Button
        android:id="@+id/continue_without_logging_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/AliceBlue"
        android:background="@drawable/button"
        android:fontFamily="@font/open_sans"
        android:text="Continue without logging in" />


</LinearLayout>