<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.user.RegisterActivity"
    android:background="#111111" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Register"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/AliceBlue"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHint="@color/colorWhite"
        android:textColor="#cbcdd6"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="Email"
        tools:ignore="HardcodedText"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="Password must be at least 7 characters long"
        android:textColor="@color/AliceBlue"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/colorWhite"
        android:textColor="#cbcdd6"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="Password"
        tools:ignore="HardcodedText"
        android:importantForAutofill="no" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="@color/colorWhite"
        android:textColor="#cbcdd6"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="Confirm Password"
        android:importantForAutofill="no"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button"
            android:textColor="@color/AliceBlue"
            android:text="Cancel"
            android:fontFamily="@font/open_sans"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button"
            android:textColor="@color/AliceBlue"
            android:backgroundTint="@color/DarkGreen"
            android:text="Register"
            android:fontFamily="@font/open_sans"
            tools:ignore="ButtonStyle,HardcodedText" />

    </LinearLayout>

</LinearLayout>